--- a/CoffeeShopManager/GUI/UserControlManagerReceiptsTab.resx
+++ b/CoffeeShopManager/GUI/UserControlManagerReceiptsTab.resx
@@ -440,4 +440,7 @@
         13D/fZHZIAAAKDcbBAAAZbbTwP8Ph1uqgxUIdmAAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="ctxRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
